# construct-deck

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml
scripts/: sync-protos.sh
src/construct_deck/: cli.py
src/construct_deck/cli/: cli.py
src/construct_deck/cli/commands/: command.py  create.py  delete.py  ping.py  read.py  update.py
src/construct_deck/cli/grammar/: base.lark  create.lark  ping.lark
src/construct_deck/cli/parser/: parser.py  transformer.py
src/construct_deck/toml_parser/: __init__.py  toml_parser.py
